<resources>
    <string name="app_name">Assignment 1</string>
    <string name="hello_message">Hello World</string>
    <string name="ButtonText">I\'m a Button</string>
    <string name="Login">Login</string>
    <string name="LoginEmailAddress">Login Name</string>
    <string name="PasswordTextBox">Enter Password</string>
    <string name="Password">Password</string>
    <string name="Switch">What does this do ?</string>
    <string name="ChatButton">Start Chat</string>
    <string name="SendButton">Send</string>
    <string name="ChatTextBox">Enter Message</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="two">two</string>
    <string name="one">One</string>
    <string name="three">three</string>
    <string name="four">About</string>
    <string name="start_toolbar">Start Toolbar</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="AlertTitle">Do you want to go back?</string>
    <string name="messagehint">Enter a new Message</string>
    <string name="start_weather_forcast">Start Weather Forcast</string>
    <string name="min_temperature">Min Temperature:</string>
    <string name="current_temperature">Current Temperature:</string>
    <string name="max_temperature">Max Temperature:</string>

</resources>